<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GenerateReportActivity">

    <LinearLayout
        android:id="@+id/generateReportLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="147dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Project"
            />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/nice_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Start Date"
            />

        <EditText
            android:id="@+id/startDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="date" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Start Time" />
        <EditText
            android:id="@+id/startTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="End Date" />

        <EditText
            android:id="@+id/endDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="End Time" />
        <EditText
            android:id="@+id/endTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <CheckBox
            android:id="@+id/noOfCP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No. of Completed Pomodoros" />

        <CheckBox
            android:id="@+id/hoursWorked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total Number of Hours Worked" />

        <Button
            android:id="@+id/generateReportBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Generate Report" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>